Revert "product corrected"
This reverts commit a2a62b773a0c31217e2e682395c9d70a4dd1b7b2.

--- a/definitions.yaml
+++ b/definitions.yaml
@@ -187,102 +187,56 @@ product:
     uuid:
       type: string
       description: |
-        Идентификатор товара или группы товаров, уникальный в рамках магазина.
-
-        Формат – `uuid4`.
-
-        Не может быть `null` или пустой строкой.
+        Уникальный идентификатор товара/группы в формате uuid4; уникален в рамках магазина; не может быть `null` или пустой строкой.
       pattern: >-
         ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
-      example: 01ba18b6-8707-5f47-3d9c-4db058054cb2
     code:
       type: string
-      description: |
-        Код товара или группы товаров.
-
-        Не может быть `null`.
+      description: Код товара либо группы; не может быть `null`.
       minLength: 0
       maxLength: 10
-      example: "6"
     barCodes:
       type: array
-      x-nullable: true
       description: |
-        Массив штрихкодов товара.
-
-        Для групп товаров - пустой массив или `null`.
+        Массив штрихкодов товара; для групп товаров - пустой массив; не может быть `null`.
       items:
         type: string
         pattern: '^[0-9]$'
         minLength: 1
-        example: "2000000000060"
     alcoCodes:
       type: array
-      x-nullable: true
       description: |
-        Массив строк кодов алкогольной продукции ЕГАИС.
-
-        Для групп товаров – пустой массив или `null`.
-
-        Если товар не относится к алкогольной продукции – пустой массив.
+        Массив строк алкокодов (кодов алкогольной продукции ЕГАИС); для групп товаров - пустой массив; не может быть null; алкокод не может быть пустой строкой и 'null'.
       items:
         type: string
-        description: 19-ти значный код алкогольной продукции ЕГАИС
         pattern: '^[0-9]{19}$'
-        example: "0000000000000000001"
     name:
       type: string
-      description: |
-        Название товара или группы товаров.
-
-        Не может быть `null` или пустой строкой.
+      description: Наименование товара/группы; не может быть пустой строкой и null
       minLength: 1
       maxLength: 100
-      example: Сидр
     price:
       type: number
       format: float
       minimum: 0
       maximum: 9999999.99
-      description: |
-        Отпускная цена товара.
-
-        Для групп товаров – 0
-
-        Не может быть `null`.
-      example: 123.12
+      description: Отпускная цена товара; для групп товаров - 0; не может быть null
     quantity:
       type: number
       format: float
-      description: |
-        Количество товара в наличии (остаток). До трёх знаков в дробной части.
-
-        Для групп товаров – 0.
-
-        Не может быть `null`.
-      example: 12
+      description: >-
+        Количество товара в наличии (остаток); до 3 знаков в дробной части;
+        для групп товаров - 0; не может быть null
     costPrice:
       type: number
       format: float
       minimum: 0
       maximum: 9999999.99
-      description: |
-        Закупочная цена товара.
-
-        Для групп товаров – 0.
-
-        Не может быть `null`.
-      example: 100.123
+      description: Закупочная цена; для групп товаров - 0; не может быть null
     measureName:
       type: string
-      description: |
-        Единица измерения товара.
-
-        >Товароучётные системы могут задавать свои единицы измерения, например: "пара", "палета", "карат" и т.д..
-
-        Не может быть`null`.
-
-        Для групп товаров указывайте "".
+      description: >-
+        Единица измерения для товара, не может быть`null`. Товароучётные системы могут задавать свои единицы измерения, например, "пара", "палета", "карат" и т.д.. Для групп товаров указывается "";
       enum:
         - ''
         - шт
@@ -296,15 +250,11 @@ product:
         - упак
         - ед
         - дроб
-      example: шт
     tax:
       type: string
-      description: |
-        Ставка НДС для товара.
-
-        Для групп товаров - "NO_VAT".
-
-        Не может быть `null` или пустой строкой.
+      description: >-
+        Ставка НДС; для групп товаров - "NO_VAT"; не может быть null и пустой
+        строкой
       enum:
         - NO_VAT
         - VAT_10
@@ -312,123 +262,70 @@ product:
         - VAT_0
         - VAT_18_118
         - VAT_10_110
-      example: VAT_18
     allowToSell:
       type: boolean
-      description: |
-        Указывает можно добавить товар в чек или нельзя:
-          * `true` – товар можно добавить в чек;
-          * `false` - товар нельзя добавить в чек.
-
-          Для групп товаров – `true`.
-
-          Не может быть `null`.
-      example: true
+      description: >-
+        Флаг доступности товара для продажи; true - товар доступен для
+        добавления в чек, false - товар не доступен для добавления в чек; для
+        групп товаров - true; не может быть null
     description:
       type: string
-      x-nullable: true
-      description: |
-        Описание товара.
-
-        Для групп товаров – "" или `null`.
-      example: Вкусный яблочный сидр.
+      description: Описание товара; для групп товаров - ""; не может быть null
       minLength: 0
     articleNumber:
       type: string
-      x-nullable: true
-      description: |
-        Артикул товара.
-
-        Для групп товаров – "" или `null`.
+      description: Артикул; для групп товаров - ""; не может быть null
       minLength: 0
       maxLength: 20
-      example: сид123
     parentUuid:
       type: string
-      x-nullable: true
-      pattern: |
+      pattern: >-
         ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
-      description: |
-        Уникальный идентификатор группы, к которой принадлежит товар или группа товаров.
-
-        >Группу товаров можно вложить в другую группу.
-
-        Формат – `uuid4`.
-
-        Если товар или группа находится в корне иерархии – может быть `null`.
-
-        Не может быть пустой строкой.
-      example: 1ddea16b-971b-dee5-3798-1b29a7aa2e27
+      description: >-
+        Уникальный идентификатор группы, к которой принадлежит товар либо
+        группа, в формате uuid4; группа может быть включена в другую группу;
+        если товар/группа находится в корне иерархии, - может быть null; не
+        может быть пустой строкой
     group:
       type: boolean
-      description: |
-        Указывает является элемент товаром или группой товаров:
-          * `true` – группа товаров;
-          * `false` – товар.
-
-        Не может быть `null`.
-      example: false
+      description: >-
+        Определяет, является ли элемент группой товаров; true - группа, false
+        - товар; не может быть null
     type:
       type: string
-      description: |
-        Тип товара:
-          * "NORMAL" – обычный;
-          * "ALCOHOL_MARKED" – маркированный алкоголь;
-          * "ALCOHOL_NOT_MARKED" – немаркированный алкоголь.
-
-        Для групп товаров – "NORMAL".
-
-        Не может быть `null`.
+      description: >-
+        Тип товара; обычный ("NORMAL"), маркированный алкоголь
+        ("ALCOHOL_MARKED"), немаркированный алкоголь("ALCOHOL_NOT_MARKED");
+        для групп товаров - "NORMAL"; не может быть null
       enum:
         - NORMAL
         - ALCOHOL_MARKED
         - ALCOHOL_NOT_MARKED
-      example: ALCOHOL_NOT_MARKED
     alcoholByVolume:
       type: number
       format: float
-      x-nullable: true
       minimum: 0
       maximum: 99.999
-      description: |
-        Крепость алкогольной продукции. До трёх знаков в дробной части.
-
-        Для алкогольных товаров значение может быть в диапазоне от
-        0.001 до 99.999.
-
-        Для неалкогольных товаров – 0.
-
-        Для групп товаров – 0 или `null`.
-      example: 5.45
+      description: >-
+        Крепость алкогольной продукции, до 3 знаков в дробной части; для
+        неалкогольных типов товаров и групп - 0; для алкоголя - в диапазоне от
+        0.001 до 99.999; не может быть null
     alcoholProductKindCode:
       type: integer
-      x-nullable: true
       minimum: 0
       maximum: 999
-      description: |
-        Код вида алкогольной продукции ФСРАР.
-
-        Для алкогольных товаров значение может быть в диапазоне от 1 до 999.
-
-        Для неалкогольных товаров – 0.
-
-        Для групп товаров – 0 или `null`.
-      example: 123
+      description: >-
+        Код вида алкогольной продукции ФСРАР; для неалкогольных типов товаров
+        и групп - 0; для алкоголя - в диапазоне от 1 до 999; не может быть
+        null
     tareVolume:
       type: number
-      x-nullable: true
       format: float
       minimum: 0
       maximum: 999.999
-      description: |
-        Ёмкость тары алкогольной продукции в литрах. До трёх знаков после запятой.
-
-        Для алкоголя значение может быть диапазоне от 0.001 до 999.999.
-
-        Для неалкогольных товаров – 0.
-
-        Для групп товаров – 0 или `null`.
-      example: 0.57
+      description: >-
+        Ёмкость тары алкогольной продукции в литрах, до 3 знаков после запятой. Для неалкогольных товаров и групп - 0. Для алкоголя - в
+        диапазоне от 0.001 до 999.999; не может быть null
 
 
 productSchema:
