--- a/paths.yaml
+++ b/paths.yaml
@@ -453,7 +453,7 @@
           title: Данные пользователя
           type: object
           required:
-            - userId
+            - userUuid
             - token
           properties:
             userId:
