--- a/definitions.yaml
+++ b/definitions.yaml
@@ -1,36 +1,48 @@
 registerFormData:
   type: object
   required:
-    - userId
+    - userUuid
   properties:
-    userId:
-      $ref: '#/userId'
+    userUuid:
+      -$ref: '#/userId'
+      type: string
+      description: |
+        **Важно:** Параметр `userUuid` к августу будет заменён на параметр `userId`. Используйте новое наименование параметра.
+
+        Идентификатор пользователя в облаке Эвотор.
+      pattern: '^[0-9]{2}-[0-9]{15}$'
+      example: 01-000000000000001
     customField:
       type: string
       description: |
-        Помимо `userId` могут передаваться и другие поля, значения которых пользователь указывает в интерфейсе [магазина приложений](https://market.evotor.ru/) при регистрации учётной записи в стороннем сервисе. Создавайте необходимые дополнительные поля в разделе **Интеграция**, на [сайте разработчиков](https://dev.evotor.ru).
+        Помимо `userUuid` могут передаваться и другие поля, значения которых пользователь указывает в интерфейсе [магазина приложений](https://market.evotor.ru/) при регистрации учётной записи в стороннем сервисе. Создавайте необходимые дополнительные поля в разделе **Интеграция**, на [сайте разработчиков](https://dev.evotor.ru).
 
         Облако Эвотор передаёт дополнительные поля в сторонний сервис во время [авторизации](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1verify%2Fpost) или [регистрации](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1create%2Fpost) пользователя.
 
         Не добавляйте поля для данных, которые пользователь может указать в Личном кабинете, после установки приложения.
 
-      example: Дополнительные данные о пользователе
+      example: Пример значения
 
 
 authorizeFormData:
   type: object
   required:
-    - userId
+    - userUuid
   properties:
-    userId:
-      $ref: '#/userId'
+    userUuid:
+      type: string
+      description: |
+        **Важно:** Параметр `userUuid` к августу будет заменён на параметр `userId`. Используйте новое наименование параметра.
+
+        Идентификатор пользователя в облаке Эвотор.
+      pattern: '^[0-9]{2}-[0-9]{15}$'
     username:
       type: string
-      description: Имя пользователя в стороннем сервисе.
-      example: И.Иванов
+      description: Имя пользователя
+      example: v.pupkin
     password:
       type: string
-      description: Пароль пользователя в стороннем сервисе.
+      description: Пароль
       example: superpassword
     customField:
       $ref: '#/registerFormData/properties/customField'
@@ -63,8 +75,13 @@ trialStarted:
             - month
             - year
           default: day
-        userId:
-          $ref: '#/userId'
+        userUuid:
+          type: string
+          description: |
+            **Важно:** Параметр `userUuid` к августу будет заменён на параметр `userId`. Используйте новое наименование параметра.
+
+            Идентификатор пользователя в облаке Эвотор.
+          pattern: '^[0-9]{2}-[0-9]{15}$'
         tariffId:
           type: string
           description: Код тарифа, для которого активирован пробный период.
