--- a/definitions.yaml
+++ b/definitions.yaml
@@ -129,7 +129,7 @@ SubscriptionRenewed:
 
 
 SubscriptionTerminated:
-  description: Подписка завершена. Прихоит, если не прошла регулярная оплата, независимо от того запросил пользователь завершение подписки или нет.
+  description: Подписка завершена. Приходит, если не прошла регулярная оплата, независимо от того запросил пользователь завершение подписки или нет.
   allOf:
     - $ref: '#/events'
     - type: object
