--- a/paths.yaml
+++ b/paths.yaml
@@ -721,6 +721,7 @@
             version:
               type: enum
               description: Версия API.
+              example: 2
             data:
               type: object
               properties:
