--- a/info.yaml
+++ b/info.yaml
@@ -37,8 +37,8 @@ description: |
 
    # Ограничения
 
-   С сентября 2017 вводятся ограничения запросов к REST API Облака Эвотор. Ко всем ответам 200OK от Облака Эвотор будут добавлены следующие заголовки:
+   С сентября 2017 вводятся ограничения запросов к REST API Облака Эвотор. Ко всем ответам 200 OK от Облака Эвотор будут добавлены следующие заголовки:
 
      * `X-RateLimit-Limit` – Максимальное количество запросов, которые вы можете сделать в текущем временном интервале.
      * `X-RateLimit-Remaining` – Количество запросов, оставшихся в текущем временном интервале.
-     * `X-RateLimit-Reset` – Время, оставшееся до начала нового временного интервала. В секундах UTC.
+     * `X-RateLimit-Reset` – Время, в секундах, оставшееся до начала нового временного интервала.
