--- a/paths.yaml
+++ b/paths.yaml
@@ -927,24 +927,50 @@
       - Вебхуки-уведомления
     summary: 'События подписки'
     description: |
-       Связанные с биллингом события, которые облако Эвотор передаёт в сторонний сервис.
+        Связанные с биллингом события, которые облако Эвотор передаёт в сторонний сервис.
 
-       Облако выполняет попытки передать события в течение трёх суток, до тех пор пока не будет получен ответ об успешной доставке сообщения (200ОК).
+        Облако выполняет попытки передать события в течение трёх суток, до тех пор пока не будет получен ответ об успешной доставке сообщения (200 ОК).
 
-       Интервал повторной отправки события около одной минуты.
+        Интервал повторной отправки события около одной минуты.
 
-       Если ваше приложение распространяется за разовые платежи, а не по подписке, Облако Эвотор передаёт только следующие события:
-       * `SubscriptionCreated` – новая подписка. Сообщает о том, что пользователь установил приложение в Личном кабинете. Приходит в начале пробного периода или перед сообщением об успешной оплате, если пробного периода нет.
-       * `SubscriptionActivated` – подписка активирована. Сообщает об успешной оплате. SubscriptionCreated, если пробного периода нет.
-       * `SubscriptionTerminated` – Подписка завершена. Приходит если не прошла регулярная оплата, независимо от того запросил пользователь завершение подписки или нет.
+        Если ваше приложение распространяется за разовые платежи, а не по подписке, Облако Эвотор передаёт только следующие события:
+          * `SubscriptionCreated` – новая подписка. Сообщает о том, что пользователь установил приложение в Личном кабинете. Приходит в начале пробного периода или перед сообщением об успешной оплате, если пробного периода нет.
+          * `SubscriptionActivated` – подписка активирована. Сообщает об успешной оплате. SubscriptionCreated, если пробного периода нет.
+          * `SubscriptionTerminated` – Подписка завершена. Приходит если не прошла регулярная оплата, независимо от того запросил пользователь завершение подписки или нет.
     parameters:
       - $ref: './parameters.yaml#/clientAuth'
-      - in: body
-        name: body
+      - name: body
+        in: body
         description: Содержимое запроса меняется в зависимости от события.
         required: true
         schema:
-          $ref: ./definitions.yaml#/events
+          $ref: ./definitions.yaml#/subscriptionevents
+    responses:
+      '200':
+        description: OK
+
+/partner.ru/api/v2/installation/event:
+  post:
+    tags:
+      - Вебхуки-уведомления
+    summary: 'События установки и удаления приложений'
+    description: |
+        Связанные с установкой и удалением приложения события, которые облако Эвотор передаёт в сторонний сервис.
+
+        Облако выполняет попытки передать события в течение трёх суток, до тех пор пока не будет получен ответ об успешной доставке сообщения (200 ОК).
+
+        Интервал повторной отправки события около одной минуты.
+    parameters:
+      - $ref: './parameters.yaml#/clientAuth'
+      - $ref: './parameters.yaml#/contentType'
+      - $ref: './parameters.yaml#/Accept'
+      - $ref: './parameters.yaml#/Accept-Charset'
+      - name: body
+        in: body
+        description: Содержимое запроса меняется в зависимости от события.
+        required: true
+        schema:
+          $ref: ./definitions.yaml#/appevents
     responses:
       '200':
         description: OK
