--- a/parameters.yaml
+++ b/parameters.yaml
@@ -78,7 +78,7 @@ storeUuid:
   required: true
   type: string
   pattern: >-
-    ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+    ^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-5][0-9a-fA-F]{3}-[89aAbB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}$
   example: 20170222-5A12-403A-80F6-75C361356826
 
 productUuid:
