--- a/paths.yaml
+++ b/paths.yaml
@@ -802,7 +802,7 @@
                           Тип товара:
                             * обычный;
                             * маркированный алкоголь;
-                            * немаркированный алкоголь.
+                            * немаркированный алкоголь;
                             * услуга.
                         enum:
                           - NORMAL
