Product uuis & parent uuid corrected

--- a/definitions.yaml
+++ b/definitions.yaml
@@ -189,6 +189,8 @@ product:
       description: |
         Идентификатор товара или группы товаров, уникальный в рамках магазина.
 
+        При обмене данными с Облаком, убедитесь, что в рамках одной синхронизации товар передаётся единожды. В противном случае, Облако не сохранит данные товара.
+
         Формат – `uuid4`.
 
         Не может быть `null` или пустой строкой.
@@ -352,6 +354,8 @@ product:
         Уникальный идентификатор группы, к которой принадлежит товар или группа товаров.
 
         >Группу товаров можно вложить в другую группу.
+
+        Если вы укажете идентификатор несуществующей группы, смарт-терминал не будет отображать товар.
 
         Формат – `uuid4`.
 
