--- a/paths.yaml
+++ b/paths.yaml
@@ -235,7 +235,7 @@
  post:
    tags:
      - Товары и документы
-   summary: 'Удалить товар'
+   summary: 'Удалить товар / все товары'
    description: |
      HTTP-запрос с пустым телом удалит все товары в магазине.
      Чтобы удалить определённый товар, в теле HTTP-запроса требуется указать его UUID.
@@ -752,7 +752,7 @@
                 storeId:
                   type: string
                   description: |
-                    Идентификатор магазина
+                    Идентификатор магазина.
 
                     Формат – `uuid4`.
                   pattern:
@@ -787,7 +787,11 @@
                     - OTHER
                 infoCheck:
                   type: boolean
-                  description: Указывает фискальный документ или нет.
+                  description: |
+                    Флаг, указывающий на фискальность документа:
+                      * `true` – информационный чек;
+                      * `false` – фискальный чек.
+
                 egais:
                   type: boolean
                   description: Указывает относится документ к ЕГАИС или нет.
