empty massive correction

--- a/definitions.yaml
+++ b/definitions.yaml
@@ -1097,7 +1097,7 @@ productToDelete:
       description: |
         Уникальный UUID товара в платформе Эвотор.
 
-        >Запрос с пустым телом удаляет все товары в магазине.
+        >Запрос с пустым массивом удаляет все товары в магазине.
 
 
 subscriptionevents:
