--- a/paths.yaml
+++ b/paths.yaml
@@ -237,7 +237,7 @@
      - Товары и документы
    summary: 'Удалить товар / все товары'
    description: |
-     HTTP-запрос с пустым телом удалит все товары в магазине.
+     HTTP-запрос с пустым массивом удалит все товары в магазине.
      Чтобы удалить определённый товар, в теле HTTP-запроса требуется указать его UUID.
    parameters:
      - $ref: ./parameters.yaml#/auth
