period + typo fix

--- a/paths.yaml
+++ b/paths.yaml
@@ -162,7 +162,7 @@
          X-Products-Violations:
            schema:
              type: string
-           description: Подробное описание перх 20-ти ошибок.
+           description: Подробное описание первых 20-ти ошибок.
 #         X-RateLimit-Limit:
 #           schema:
 #             type: integer
@@ -297,7 +297,7 @@
 
          Если не заданы даты начала и окончания выборки, возвращаются документы созданные за последний месяц с текущей даты.
 
-         Максимальный период выборки – шесть месяцев. Если задана выборка больше шести месяцев, Облако Эвотор ответит ошибкой.
+         Для выгрузки доступны документы, созданные не более шести месяцев назад, с момента выполнения запроса. Диапазон дат (от `gtCloseDate` до `ltCloseDate`) в рамках одного запроса не может превышать один месяц.
 
          Формат времени - 2017-01-10T09:33:19.757+0000
      - name: gtCloseDate
@@ -309,7 +309,7 @@
 
          Если не заданы даты начала и окончания выборки, возвращаются документы созданные за последний месяц с текущей даты.
 
-         Максимальный период выборки – шесть месяцев. Если задана выборка больше шести месяцев, Облако Эвотор ответит ошибкой.
+         Для выгрузки доступны документы, созданные не более шести месяцев назад, с момента выполнения запроса. Диапазон дат (от `gtCloseDate` до `ltCloseDate`) в рамках одного запроса не может превышать один месяц.
 
          Формат времени - 2017-01-10T09:33:19.757+0000
      - name: types
@@ -1093,7 +1093,6 @@
 
      В теле запроса укажите один или несколько идентификаторов схем, которые требуется удалить.
 
-     Запрос с пустым телом удаляет все схемы.
    parameters:
      - $ref: ./parameters.yaml#/contentType
      - $ref: ./parameters.yaml#/auth
@@ -1219,7 +1218,6 @@
 
      В теле запроса укажите один или несколько идентификаторов дополнительных полей, которые требуется удалить.
 
-     Запрос с пустым телом удаляет все дополнительные поля.
    parameters:
      - $ref: ./parameters.yaml#/contentType
      - $ref: ./parameters.yaml#/auth
