--- a/info.yaml
+++ b/info.yaml
@@ -37,7 +37,11 @@ description: |
 
    # Ограничения
 
-   С сентября 2017 вводятся ограничения запросов к REST API Облака Эвотор. Ко всем ответам 200 OK от Облака Эвотор будут добавлены следующие заголовки:
+   С сентября 2017 вводятся ограничения запросов к REST API Облака Эвотор.
+
+   Максимальный объём данных в запросе к Облаку Эвотор не может превышть 10 МБайт.
+
+   Ко всем ответам 200 OK от Облака Эвотор будут добавлены следующие заголовки:
 
      * `X-RateLimit-Limit` – Максимальное количество запросов, которые вы можете сделать в текущем временном интервале.
      * `X-RateLimit-Remaining` – Количество запросов, оставшихся в текущем временном интервале.
