Fixed receipts v2 description
Receipts v2 payload may contain only one receipt object per request

--- a/paths.yaml
+++ b/paths.yaml
@@ -722,7 +722,7 @@
       - Вебхуки-уведомления
     summary: 'Отправить чек (V2)'
     description: |
-      После оплаты отправляет чек в сторонний сервис. Тело запроса содержит один или несколько чеков.
+      После оплаты отправляет чек в сторонний сервис. Тело запроса всегда содержит один чек.
     parameters:
       - $ref: ./parameters.yaml#/clientAuth
       - name: receipt
